fixed some spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ header ul {
 
 header li {
   float: left;
-  font-size: 2em;
+  font-size: 1.5em;
   padding: .3em;
   margin-top: 1px;
 }
@@ -65,6 +65,11 @@ header li a {
 header h1 {
   color: var(--name-accent-color);
   font-weight: normal;
+  font-size: 1.5em;
+}
+
+p {
+  line-height: 25px;
 }
 
 nav {
